update ingredient category service