@@ -12,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class EventServiceImpl implements EventService {
@@ -42,7 +41,7 @@ public class EventServiceImpl implements EventService {
         List<Event> events = eventRepository.findAll();
         return events.stream()
                 .map(event -> modelMapper.map(event, EventDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -50,7 +49,7 @@ public class EventServiceImpl implements EventService {
         List<Event> events = eventRepository.findEventsByRestaurantRestaurantId(restaurantId);
         return events.stream()
                 .map(event -> modelMapper.map(event, EventDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
